[created function to update order lines when in wizard products are selected, created function for to display best customer tag if customer rank is greater than 5]

--- a/projects/ngo_management/views/main_menu.xml
+++ b/projects/ngo_management/views/main_menu.xml
@@ -21,32 +21,75 @@
         <menuitem name="Orphan Request"
                   id="orphan_request_menu_root"
                   parent="NGO_main_menu_root"
-                  action="orphans_request_action_window"
                   />
 
         <menuitem name="Orphan Members"
                   id="orphan_members_menu_root"
                   parent="NGO_main_menu_root"
-                  action="orphans_organization_action_window"
+                  action="orphans_member_action_window"
                   />
 
         <menuitem name="Donation"
                   id="donation_menu_root"
                   parent="NGO_main_menu_root"
-                  action="orphans_organization_action_window"
+                  action="orphans_donation_action_window"
+                  />
+
+        <menuitem name="Expense"
+                  id="expense_main_menu_root"
+                  parent="NGO_main_menu_root"
+                  />
+
+<!--        <menuitem name="Advertise"-->
+<!--                  id="advertise_menu"-->
+<!--                  parent="NGO_main_menu_root"-->
+<!--                  action="organization_advertise_action_window_id"-->
+<!--                  />-->
+<!--        <menuitem name="Advertise"-->
+<!--                  id="advertise_menu_id"-->
+<!--                  parent="NGO_main_menu_root"-->
+<!--                  action="organization_advertise_action_window_id"-->
+<!--                  />-->
+<!--         action menu for orphan request        -->
+
+<!--        <menuitem name="Request List"-->
+<!--                  id="request_list_menu_root"-->
+<!--                  parent="orphan_request_menu_root"-->
+<!--                  action="orphans_request_tree_action_window"-->
+<!--                  />-->
+
+<!--        <menuitem name="Request List"-->
+<!--                  id="request_tree_menu_root_id"-->
+<!--                  parent="orphan_request_menu_root"-->
+<!--                  action="orphans_request_list_action_window"-->
+<!--                  />-->
+
+<!--         <menuitem name="Request Tree"-->
+<!--                  id="request_tree_menu_root_idiiiiiiiiiiiiiiiiiiiii"-->
+<!--                  parent="orphan_request_menu_root"-->
+<!--                  action="orphans_request_list_action_windowiiiiiiiiiiiiiiiiiiiiiii"-->
+<!--                  />-->
+
+        <menuitem name="Request list"
+                  id="request_menu_root_tree_ids"
+                  parent="orphan_request_menu_root"
+                  action="tree_id"
+                  />
+        <menuitem name="Request"
+                  id="request_menu_root"
+                  parent="orphan_request_menu_root"
+                  action="orphans_request_form_action_window"
                   />
 
         <menuitem name="Expense"
                   id="expense_menu_root"
-                  parent="NGO_main_menu_root"
-                  action="orphans_organization_action_window"
+                  parent="expense_main_menu_root"
+                  action="expense_action_window"
                   />
-
-
-        <menuitem name="Advertise"
-                  id="advertise_menu_root"
-                  parent="NGO_main_menu_root"
-                  action="organization_advertise_action_window"
+        <menuitem name="Expense Type"
+                  id="expense_type_menu_root"
+                  parent="expense_main_menu_root"
+                  action="expense_type_action_window"
                   />
 
     </data>
