--- a/projects/ngo_management/views/res_partner.xml
+++ b/projects/ngo_management/views/res_partner.xml
@@ -1,57 +1,75 @@
 <?xml version= "1.0" encoding= "UTF-8"?>
 <odoo>
+    <data>
+<!--        <record id="ngo_hide_button" model="ir.ui.view">-->
+<!--            <field name="name">res.partner button</field>-->
+<!--            <field name="model">res.partner</field>-->
+<!--            <field name="inherit_id" ref="sale.res_partner_view_buttons"/>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <div name="button_box" position="attributes">-->
+<!--                    <attribute name="invisible">1</attribute>-->
+<!--                </div>-->
+<!--            </field>-->
+<!--        </record>-->
 
-    <record id="ngo_check_bool" model="ir.ui.view">
-        <field name="name">res.partner.form</field>
-        <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.view_partner_form"/>
-        <field name="arch" type="xml">
-            <div name="button_box" position="inside">
+        <record id="ngo_check_bool" model="ir.ui.view">
+            <field name="name">res.partner.form</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="base.view_partner_form"/>
+            <field name="arch" type="xml">
 
-                <button string="Total Orphan Members" type="object" name="tempSmartButton"
-                        class="oe_stat_button" icon="fa-external-link"/>
-                <button string="Total Available Funds" type="object" name="tempSmartButton2"
-                        class="oe_stat_button" icon="fa-external-link"/>
-            </div>
-            <field name="company_type" position="after">
-                <field name="ngo_check" attrs="{'invisible':[('company_type','=','person')]}"/>
-                <name attrs="{'invisible':[('company_type','=','person')]}">
-                    <b>Ngo</b>
-                </name>
+
+                <div class="oe_button_box" name="button_box">
+                    <button type="object" name="total_orphan_members"
+                            class="oe_stat_button" icon="fa-external-link">
+                        <div class="o_field_widget o_stat_info" height="55">
+                            <field name="orphan_members" string=" " widget="statinfo"/>
+                            <span class="o_stat_text" height="23%">Orphan</span>
+                            <span class="o_stat_text">Members</span>
+                        </div>
+                    </button>
+                    <button string="Total Available Funds" type="object" name="total_available_funds"
+                            class="oe_stat_button" icon="fa-external-link"/>
+                </div>
+                <field name="company_type" position="after">
+                    <field name="ngo_check" attrs="{'invisible':[('company_type','=','person')]}"/>
+                    <name attrs="{'invisible':[('company_type','=','person')]}">
+                        <b>Ngo</b>
+                    </name>
+                </field>
             </field>
-        </field>
-    </record>
+        </record>
 
-    <!-- - Kanban View  -->
-    <record id="res_partner_kanban_inherit" model="ir.ui.view">
-        <field name="name">res.partner.kanban.inherit</field>
-        <field name="model">res.partner</field>
-        <field name="inherit_id" ref="base.res_partner_kanban_view"/>
-        <field name="arch" type="xml">
-            <xpath expr="//span[hasclass('oe_kanban_partner_links')]" position="inside">
-                <span t-if="record.sale_order_count.value>0" class="badge badge-pill">
-                    <i class="fa fa-fw fa-usd" role="img" aria-label="Sale orders" title="Sales orders"/>
-                    <t t-esc="record.sale_order_count.value"/>
-                </span>
-            </xpath>
-        </field>
-    </record>
+        <!-- - Kanban View  -->
+        <record id="res_partner_kanban_inherit" model="ir.ui.view">
+            <field name="name">res.partner.kanban.inherit</field>
+            <field name="model">res.partner</field>
+            <field name="inherit_id" ref="base.res_partner_kanban_view"/>
+            <field name="arch" type="xml">
+                <xpath expr="//span[hasclass('oe_kanban_partner_links')]" position="inside">
+                    <span t-if="record.sale_order_count.value>0" class="badge badge-pill">
+                        <i class="fa fa-fw fa-usd" role="img" aria-label="Sale orders" title="Sales orders"/>
+                        <t t-esc="record.sale_order_count.value"/>
+                    </span>
+                </xpath>
+            </field>
+        </record>
 
-    <record id="res_partner_search_view" model="ir.ui.view">
-        <field name="name">res.partner.search</field>
-        <field name="model">res.partner</field>
-        <field name="arch" type="xml">
-            <search string="Students">
-                <filter name="filter_ngo" string="NGO" domain="[('ngo_check','=','True')]"/>
-            </search>
-        </field>
-    </record>
+        <record id="res_partner_search_view" model="ir.ui.view">
+            <field name="name">res.partner.search</field>
+            <field name="model">res.partner</field>
+            <field name="arch" type="xml">
+                <search string="Students">
+                    <filter name="filter_ngo" string="NGO" domain="[('ngo_check','=','True')]"/>
+                </search>
+            </field>
+        </record>
 
-    <record model="ir.actions.act_window" id="res_partner_kanban_action_window">
-        <field name="name">res_partner_kanban window</field>
-        <field name="res_model">res.partner</field>
-        <field name="view_mode">kanban,form</field>
-        <field name="context">{'search_default_filter_ngo': True}</field>
-    </record>
-
+        <record model="ir.actions.act_window" id="res_partner_kanban_action_window">
+            <field name="name">res_partner_kanban window</field>
+            <field name="res_model">res.partner</field>
+            <field name="view_mode">kanban,form</field>
+            <field name="context">{'search_default_filter_ngo': True}</field>
+        </record>
+    </data>
 </odoo>
