--- a/projects/ngo_management/views/orphan_request.xml
+++ b/projects/ngo_management/views/orphan_request.xml
@@ -1,71 +1,117 @@
 <odoo>
-  <data>
-    <!-- explicit list view orphans definition -->
+    <data>
+        <!-- explicit list view orphans definition -->
 
-    <record model="ir.ui.view" id="orphans_request_form">
-      <field name="name">Orphans Request form</field>
-      <field name="model">orphans.request</field>
-      <field name="arch" type="xml">
-        <form>
-<!--          <div class="oe_button_box" name="button_box">-->
-<!--              <button  name="s_button" type="object" icon="fa-smile-o icon">-->
-<!--                <div class="o_field_widget o_stat_info">-->
-<!--                  <span class="o_stat_text">Request</span>-->
-<!--                  <span class="o_stat_text">Preview</span>-->
-<!--                </div>-->
-<!--              </button>-->
-<!--          </div>-->
-          <header>
-            <field name="state" widget="statusbar" options="{'clickable':'1'}"/>
-          </header>
-        <group>
-          <group>
-            <field name="name"/>
-            <field name="dob"/>
-            <field name="age"/>
-          </group>
+        <record model="ir.ui.view" id="orphans_request_form">
+            <field name="name">Orphans Request form</field>
+            <field name="model">orphans.request</field>
+            <field name="arch" type="xml">
+                <form>
+                    <header>
+                        <field name="state" widget="statusbar" options="{'clickable':'1'}"/>
+                    </header>
+                    <group>
+                        <group>
+                            <field name="name"/>
+                            <field name="dob"/>
+                            <field name="age"/>
+                        </group>
 
 
-          <group>
-            <field name="guardian_name"/>
-            <field name="organization_id" options="{'no_quick_create':True,'no_create_edit':True,'no_open': True,}"/>
-          </group>
-        </group>
+                        <group>
+                            <field name="guardian_name"/>
+                            <field name="organization_id"
+                                   options="{'no_quick_create':True,'no_create_edit':True,'no_open': True,}"/>
+                            <field name="ngo_id"/>
+                        </group>
+                    </group>
 
-          <group>
-            <group>
-                  <field name="s1" placeholder="Street 1"/>
-                  <field name="s2" string="" placeholder="Street 2"/>
-            </group>
-            <group>
-                <div style="width:50%">
-                  <field name="city" style="width:30%" placeholder="City" string=""/>
-                  <field name="state1"  style="width:30%" placeholder="State" string=""/>
-                  <field name="zip"  style="width:40%" placeholder="Zip" string=""/>
-                  <field name="country" placeholder="Country" string=""/>
-                </div>
-            </group>
-          </group>
+                    <group>
+                        <group>
+                            <field name="s1" placeholder="Street 1"/>
+                            <field name="s2" string="" placeholder="Street 2"/>
+                        </group>
+                        <group>
+                            <div style="width:50%">
+                                <field name="city" style="width:30%" placeholder="City" string=""/>
+                                <field name="state_id" style="width:30%" placeholder="State" string=""/>
+                                <field name="zip" style="width:40%" placeholder="Zip" string=""/>
+                                <field name="country_id" placeholder="Country" string=""/>
+                            </div>
+                        </group>
+                    </group>
 
-          <footer>
-            <button name="val_age" class="btn-primary" string="send" type="object"/>
-            <button string="Cancel" special="cancel"/>
-          </footer>
+                    <footer>
+                        <div name="buttons" attrs="{'invisible':[('state','!=','draft')]}">
+                        <button name="val_age" class="btn-primary" string="send" type="object"/>
+                        <button string="Cancel" special="cancel"/>
+                        </div>
+                    </footer>
 
-        </form>
-      </field>
-    </record>
+                </form>
+            </field>
+        </record>
+
+        <!--      tree view orphan request-->
+<!--        <record model="ir.ui.view" id="orphans_request_tree_list">-->
+<!--            <field name="name">Orphans Member form</field>-->
+<!--            <field name="model">orphans.request</field>-->
+<!--            <field name="arch" type="xml">-->
+<!--                <tree create="False">-->
+
+<!--                    <field name="name"/>-->
+<!--                    <field name="dob"/>-->
+<!--                    <field name="age"/>-->
+<!--                    <field name="guardian_name"/>-->
+<!--                    <field name="organization_id" options="{'no_quick_create':True,'no_create_edit':True,'no_open': True}"/>-->
+<!--                    <field name="state" widget="badge"/>-->
+<!--                    <button name="Approve_button" type="object" string="Approve" class="btn-primary"-->
+<!--                    attrs="{'invisible':[('state','!=','send')]}"/>-->
+
+<!--                    <button name="Cancel_button" type="object" string="Cancel" class="btn-primary"-->
+<!--                    attrs="{'invisible':[('state','!=','send')]}"/>-->
+
+<!--                </tree>-->
+<!--            </field>-->
+<!--        </record>-->
+
+        <record model="ir.ui.view" id="orphans_organization_tree_request">
+            <field name="name">Orphans Expense tree request</field>
+            <field name="model">orphans.request</field>
+            <field name="arch" type="xml">
+                <tree>
+                    <field name="name"/>
+<!--                    <field name="foundation_years"/>-->
+                </tree>
+            </field>
+        </record>
 
 
-    <!-- actions opening views on models -->
+        <!-- actions opening views on models -->
 
-    <record model="ir.actions.act_window" id="orphans_request_action_window">
-      <field name="name">Orphans Request window</field>
-      <field name="res_model">orphans.request</field>
-      <field name="view_mode">form</field>
-      <field name="target">new</field>
-    </record>
+        <record model="ir.actions.act_window" id="orphans_request_form_action_window">
+            <field name="name">Orphans Request window</field>
+            <field name="res_model">orphans.request</field>
+            <field name="view_mode">form</field>
+            <field name="target">new</field>
+        </record>
+
+<!--        <record model="ir.actions.act_window" id="orphans_request_list_action_window">-->
+<!--            <field name="name">Orphans Request window</field>-->
+<!--            <field name="res_model">orphans.request</field>-->
+<!--            <field name="view_mode">tree</field>-->
+<!--            <field name="view_id" ref="orphans_request_tree_id"/>-->
+<!--        </record>-->
 
 
-  </data>
+        <record model="ir.actions.act_window" id="tree_id">
+            <field name="name">Orphans Request window</field>
+            <field name="res_model">orphans.request</field>
+            <field name="view_mode">tree,form</field>
+            <field name="view_id" ref="orphans_organization_tree_request"/>
+<!--            <field name="target">current</field>-->
+        </record>
+
+
+    </data>
 </odoo>
