--- a/projects/smart_view/views/sale_order.xml
+++ b/projects/smart_view/views/sale_order.xml
@@ -20,4 +20,17 @@
         </field>
     </record>
 
+
+      <record id="action_server_write" model="ir.actions.server">
+        <field name="name">Update record</field>
+        <field name="type">ir.actions.server</field>
+        <field name="model_id" ref="model_sale_order"/>
+        <field name="binding_model_id" ref="model_sale_order"/>
+        <field name="state">code</field>
+        <field name="code">action = record.change_state()</field>
+    </record>
+
+
+
+
 </odoo>
