[IMP]add wizard in employees,added menu in employees

--- a/projects/ngo_management/reports/receipt_report.xml
+++ b/projects/ngo_management/reports/receipt_report.xml
@@ -1,13 +1,13 @@
 <odoo>
     <!-- Action for Report -->
-    <record id="doner_receipt_report" model="ir.actions.report">
-        <field name="name">Download Receipt</field>
+    <record id="donation_details_report" model="ir.actions.report">
+        <field name="name">Donation Receipt</field>
         <field name="model">orphans.organization.donation</field>
         <field name="report_type">qweb-pdf</field>
-        <field name="report_name">ngo_management.doner_receipt_main_template</field>
-        <field name="report_file">ngo_management.doner_receipt_main_template</field>
+        <field name="report_name">ngo_management.donation_receipt_sub_template</field>
+        <field name="report_file">ngo_management.donation_receipt_sub_template</field>
         <field name="binding_model_id" ref="model_orphans_organization_donation"/>
         <field name="binding_type">report</field>
-        <field name="paperformat_id" ref="orphans_doner_paperformat"/>
+        <field name="paperformat_id" ref="donation_report_paperformat"/>
     </record>
 </odoo>
