--- a/projects/ngo_management/views/orphan_organization.xml
+++ b/projects/ngo_management/views/orphan_organization.xml
@@ -8,10 +8,26 @@
                 <form>
                     <sheet>
                         <div class="oe_button_box" name="button_box">
-                            <button string="Orphan Members" type="object" name="tempSmartButton"
-                                    class="oe_stat_button" icon="fa-external-link"/>
-                            <button string="Available Funds" type="object" name="tempSmartButton2"
-                                    class="oe_stat_button" icon="fa-external-link"/>
+                            <button name="tempSmartButton"
+                                    type="object"
+                                    class="oe_stat_button"
+                                    icon="fa-external-link">
+                                <div class="o_field_widget o_stat_info" height="55">
+                                    <field name="orphan_members" class="o_stat_value"/>
+                                    <span class="o_stat_text" height="23%">Orphan</span>
+                                    <span class="o_stat_text">Members</span>
+                                </div>
+                            </button>
+                            <button type="object"
+                                    name="tempSmartButton2"
+                                    class="oe_stat_button"
+                                    icon="fa-external-link">
+                                <div class="o_field_widget o_stat_info" height="55">
+                                    <field name="amount" class="o_stat_value"/>
+                                    <span class="o_stat_text" height="23%">Total</span>
+                                    <span class="o_stat_text" height="23%">Avail Funds</span>
+                                </div>
+                            </button>
                         </div>
                         <div>
                             <field name="name" placeholder="Orphans Organization Name" widget="text"
@@ -20,7 +36,9 @@
                         </div>
                         <group>
                             <group>
-                                <field name="ngo_id" options="{'no_quick_create':True,'no_create_edit':True,'no_open': True,}"/>
+                                <field name="ngo_id"
+                                       options="{'no_quick_create':True,'no_create_edit':True,'no_open': True}"/>
+                                <field name="seats"/>
                                 <field name="street1" placeholder="Street 1"/>
                                 <field name="street2" string="" placeholder="Street 2"/>
                             </group>
@@ -40,6 +58,33 @@
                 </form>
             </field>
         </record>
+
+        <!--  - Kanban View   -->
+        <record model="ir.ui.view" id="organization_kanban">
+            <field name="name">organization kanban View</field>
+            <field name="model">orphans.organization</field>
+            <field name="arch" type="xml">
+                <kanban class="o_res_partner_kanban" sample="1">
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div class="oe_kanban_global_click o_kanban_record_has_image_fill o_res_partner_kanban">
+                                <div t-attf-class="oe_kanban_global_click">
+                                    <field name="o_image" widget="image"/>
+                                    <div class="o_kanban_details">
+                                        <br/>
+                                        <br/>
+                                        <field name="name"/>
+                                        -
+                                        <field name="state_id"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
+
 
         <record model="ir.ui.view" id="orphans_organization_tree">
             <field name="name">Orphans Expense tree</field>
