--- a/projects/ngo_management/views/orphan_members.xml
+++ b/projects/ngo_management/views/orphan_members.xml
@@ -17,6 +17,7 @@
     <record model="ir.actions.act_window" id="orphans_member_action_window">
         <field name="name">Orphans member</field>
         <field name="res_model">orphans.member</field>
+        <field name="type">ir.actions.act_window</field>
         <field name="view_mode">tree</field>
         <field name="view_id" ref="orphans_member_tree"/>
     </record>
