excel report created

--- a/projects/rental_management/views/rental.xml
+++ b/projects/rental_management/views/rental.xml
@@ -72,7 +72,7 @@
 
     <menuitem name="Rental" id="rental_id" parent="submenu1_id"
               action="rental_action"/>
-    <menuitem name="Rental Type" id="rental_menu_id" parent="submenu1_id"
-              action="rental_type_action"/>
+<!--    <menuitem name="Rental Type" id="rental_menu_id" parent="submenu1_id"-->
+<!--              action="rental_type_action"/>-->
 
 </odoo>
