--- a/projects/rental_management/wizards/hr_wizard.xml
+++ b/projects/rental_management/wizards/hr_wizard.xml
@@ -7,11 +7,16 @@
         <field name="model">hr.wizard</field>
         <field name="arch" type="xml">
             <form>
+
                 <group>
-                    <field name="employee"/>
+                    <field name="employee_ids"/>
                     <field name="start_date"/>
                     <field name="end_date"/>
                 </group>
+                <footer>
+                    <button  name="action_xlwt_report" type="object" string="Print" class="btn-dark"/>
+                    <button  special="cancel"  string="Cancel" class="btn-info"/>
+                </footer>
             </form>
 
         </field>
